--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -103,43 +103,43 @@
 		<item>33</item>
 		<item>34</item>
 	</string-array>
-	
+
 	<string-array name="powersaving_screen_off_wifi_entries">
 		<item>Leave untouched</item>
 		<item>Turn Wi-Fi off</item>
 		<item>Turn Wi-Fi on</item>
 	</string-array>
-	
+
 	<string-array name="powersaving_screen_off_wifi_values" translatable="false">
 		<item>40</item>
 		<item>41</item>
 		<item>42</item>
 	</string-array>
-	
+
 	<string-array name="powersaving_sync_data_mode_entries">
 		<item>Leave untouched</item>
 		<item>Only Wi-Fi</item>
 		<item>Wi-Fi preferred</item>
 		<item>Data only</item>
 	</string-array>
-	
+
 	<string-array name="powersaving_sync_data_mode_values" translatable="false">
 		<item>54</item>
 		<item>50</item>
 		<item>51</item>
 		<item>53</item>
 	</string-array>
-	
+
 	<string-array name="powersaving_sync_data_mobile_mode_entries">
 		<item>2G/1x only</item>
 		<item>Prefer 3G</item>
 	</string-array>
-	
+
 	<string-array name="powersaving_sync_data_mobile_mode_values" translatable="false">
 		<item>62</item>
 		<item>63</item>
 	</string-array>
-	
+
 	<string-array name="led_entries">
 		<item>.5 seconds</item>
 		<item>1 second</item>
@@ -221,7 +221,7 @@
 		<item>2</item>
 	</string-array>
 
-	<!-- clock stuff 
+	<!-- clock stuff -->
 	<string-array name="clock_style_entries">
 		<item>Right clock</item>
 		<item>Center clock</item>
@@ -256,7 +256,7 @@
 		<item>0</item>
 		<item>1</item>
 		<item>2</item>
-	</string-array>-->
+	</string-array>
 
 	<!-- Toggles -->
 
@@ -334,7 +334,7 @@
 		<item>Quad</item>
         <item>Octo</item>
 	</string-array>
-	
+
 	<string-array name="pref_lockscreen_calendar_interval_values" translatable="false">
 		<item>1000</item>
 		<item>1500</item>
@@ -344,7 +344,7 @@
         <item>3500</item>
         <item>4000</item>
 	</string-array>
-	
+
 	<string-array name="pref_lockscreen_calendar_interval_entries">
 		<item>1 second</item>
 		<item>1.5 seconds</item>
@@ -354,7 +354,7 @@
         <item>3.5 seconds</item>
         <item>4 seconds</item>
 	</string-array>
-	
+
 	<string-array name="pref_lockscreen_calendar_range_values" translatable="false">
 		<item>86400000</item>
 		<item>172800000</item>
@@ -364,7 +364,7 @@
         <item>518400000</item>
         <item>604800000</item>
 	</string-array>
-	
+
 	<string-array name="pref_lockscreen_calendar_range_entries">
 		<item>1 day</item>
 		<item>2 days</item>
@@ -404,7 +404,7 @@
                 <item>2</item>
                 <item>3</item>
         </string-array>
-	
+
 	<string-array name="battery_icon_entries">
 		<item>Icon only</item>
 		<item>Text only</item>
@@ -428,38 +428,38 @@
 		<item>Top of navbar</item>
 		<item>Bottom of navbar</item>
 	</string-array>
-	
+
 	<string-array name="battery_bar_values" translatable="false">
 		<item>0</item>
 		<item>1</item>
 		<item>2</item>
 		<item>3</item>
 	</string-array>
-	
+
 	<string-array name="battery_bar_style_entries">
 		<item>Regular</item>
 		<item>Center-mirrored</item>
 	</string-array>
-	
+
 	<string-array name="battery_bar_style_values" translatable="false">
 		<item>0</item>
 		<item>1</item>
 	</string-array>
-	
+
 	<string-array name="battery_bar_thickness_entries">
 		<item>1 dp</item>
 		<item>2 dp</item>
 		<item>3 dp</item>
 		<item>4 dp</item>
 	</string-array>
-	
+
 	<string-array name="battery_bar_thickness_values" translatable="false">
 		<item>1</item>
 		<item>2</item>
 		<item>3</item>
 		<item>4</item>
 	</string-array>
-	
+
 	<string-array name="available_toggles_entries" translatable="false">
 		<item>ROTATE</item>
 		<item>BT</item>
@@ -493,7 +493,7 @@
 		<item>Sync</item>
 		<item>Fast charge</item>
 	</string-array>
-	
+
 	<string-array name="lockscreen_choice_entries">
 		<item>Unlock</item>
 		<item>Sound toggle</item>
@@ -503,7 +503,7 @@
 		<item>Custom app</item>
 		<item>Blank</item>
 	</string-array>
-	
+
 	<string-array name="lockscreen_choice_values" translatable="false">
 		<item>**unlock**</item>
 		<item>**sound**</item>
@@ -513,7 +513,7 @@
 		<item>**app**</item>
 		<item>**null**</item>
 	</string-array>
-	
+
 	<string-array name="glow_times_entries">
 		<item>Off</item>
 		<item>Super quick</item>
@@ -527,7 +527,7 @@
 		<item>250|25</item>
 		<item>500|50</item>
 	</string-array>
-	
+
 	<string-array name="lcd_density_entries" translatable="false">
 		<item>160</item>
 		<item>182</item>
