--- a/res/xml/prefs_statusbar_clock.xml
+++ b/res/xml/prefs_statusbar_clock.xml
@@ -14,12 +14,12 @@
 		android:key="clock_am_pm_style"
 		android:title="@string/title_clock_ampm_entries" />
 
-	<!--ListPreference
+	<ListPreference
 		android:key="clock_weekday"
 		android:title="@string/enable_clock_weekday"
 		android:summary="@string/enable_clock_weekday_summary"
 		android:entries="@array/clock_weekday_entries"
-		android:entryValues="@array/clock_weekday_values" /-->
+		android:entryValues="@array/clock_weekday_values" />
 
 	<PreferenceCategory
 		android:key="colors"
