RC: Battery Bar + colorpicker
Added back in battery bar options to RC
Also put back in the color picker

  Patch Set 2: Fix conflicts from abandoned
    dependency.

Signed-off-by: Adam Fisch <adammfisch@gmail.com>
Signed-off-by: KhasMek <Boushh@gmail.com>
Change-Id: I4aae67e82186524ae8b1f0237000184b2789b02e

Conflicts:

	src/com/aokp/romcontrol/fragments/StatusBarBattery.java
	src/net/margaritov/preference/colorpicker/ColorPickerDialog.java
	src/net/margaritov/preference/colorpicker/ColorPickerPreference.java
	src/net/margaritov/preference/colorpicker/ColorPickerView.java

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -81,7 +81,7 @@
 		<item>@string/toggle_wifi_ap</item>
         <item>@string/toggle_lte</item>
         <item>@string/toggle_2g</item>
-        <item>@string/toggle_torch</item>
+        <item>@string/toggle_data</item>
 		<item>@string/toggle_fast_charge</item>
 	</string-array>
     <!-- Battery styles -->
