--- a/res/xml/preference_headers.xml
+++ b/res/xml/preference_headers.xml
@@ -1,14 +1,38 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <header android:title="@string/user_interface" />
+
     <header
         android:id="@+id/user_interface"
         android:fragment="com.ar.slimsettings.fragments.UserInterface"
         android:title="@string/general_ui"
-        android:icon="@drawable/ic_rom_control_general_ui"
+        android:icon="@drawable/ic_slim_settings_general_ui"
         android:summary="@string/header_summary_general_ui" />
+
+    <header
+        android:id="@+id/lockscreen"
+        android:fragment="com.ar.slimsettings.fragments.Lockscreens"
+        android:title="@string/lockscreen_options"
+        android:icon="@drawable/ic_slim_settings_lockscreens"
+        android:summary="@string/header_summary_lockscreens" />
+     <header
+        android:id="@+id/nav_bar"
+        android:fragment="com.ar.slimsettings.fragments.Navbar"
+        android:title="@string/nav_bar"
+        android:icon="@drawable/ic_slim_settings_navigation_bar"
+        android:summary="@string/header_summary_navigation_bar" />
 
     <header
         android:id="@+id/statusbar"
         android:title="@string/header_statusbar" />
+
+    <header
+        android:id="@+id/statusbar_battery"
+        android:title="@string/battery"
+        android:fragment="com.ar.slimsettings.fragments.StatusBarBattery"
+        android:icon="@drawable/ic_slim_settings_battery"
+        android:summary="@string/header_summary_battery" />
+
     <header
         android:id="@+id/statusbar_clock"
         android:fragment="com.ar.slimsettings.fragments.StatusBarClock"
@@ -21,12 +45,38 @@
         android:icon="@drawable/ic_slim_settings_toggles"
         android:summary="@string/header_summary_toggles"
         android:title="@string/toggles_layout" />
+     
+    <header
+        android:id="@+id/system"
+        android:title="@string/header_system" />
 
     <header
-        android:id="@+id/statusbar_battery"
-        android:title="@string/battery"
-        android:fragment="com.ar.slimsettings.fragments.StatusBarBattery"
-        android:icon="@drawable/ic_slim_settings_battery"
-        android:summary="@string/header_summary_battery" />
+        android:id="@+id/led"
+        android:fragment="com.ar.slimsettings.fragments.LEDControl"
+        android:title="@string/led_options"
+        android:icon="@drawable/ic_slim_settings_led"
+        android:summary="@string/header_summary_led" />
+
+    <header
+        android:id="@+id/sound"
+        android:fragment="com.ar.slimsettings.fragments.Sound"
+        android:title="@string/sound"
+        android:icon="@drawable/ic_slim_settings_sound"
+        android:summary="@string/header_summary_sound" />
+
+
+
+    <header
+        android:id="@+id/tools"
+        android:title="@string/tools" />
+
+    <header android:icon="@drawable/ic_slim_settings_performance"
+            android:title="@string/performance">
+        <intent
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.ar.slimsettings.performance.Performance"
+                android:targetPackage="com.ar.slimsettings" />
+    </header>
+
 
 </preference-headers>
