Bring back brightness slide - aokp

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -84,6 +84,20 @@
         <item>@string/toggle_data</item>
 		<item>@string/toggle_fast_charge</item>
 	</string-array>
+
+    <!-- Brightness slider -->
+    <string-array name="brightness_location_entries">
+        <item>On top</item>
+        <item>On the bottom</item>
+        <item>Don\'t Show</item>
+    </string-array>
+
+    <string-array name="brightness_location_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <!-- Battery styles -->
     <string-array name="battery_icon_entries">
 	<item>Icon only</item>
